--- a/main/main.css
+++ b/main/main.css
@@ -8,7 +8,16 @@
     -ms-flex-direction: row;
         flex-direction: row;
     min-height: 100vh;
+    max-height: 100vh
 }
+a{   
+    font-family: verdana;
+	font-size: 11px;
+	font-weight: bold;
+	color:#9b9b9b !important;
+	text-decoration: none !important
+	}
+
 
 * {
 	margin: 0px; 
@@ -21,7 +30,8 @@
     border-bottom-left-radius: 1.875rem !important;
     background-image: url('../assets/images/wave.svg')!important;
     background-size: contain;
-    background-position: left !important;
+    background-position: 0rem 0.094rem !important;
+
    
    
 }
@@ -31,19 +41,51 @@
  border-bottom-right-radius: 1.875rem !important;
 
 }
+.form-title{
+  font-size: 30px;
+  color: #182825;
+  line-height: 1.2;
+  text-align: center;
+  width: 100%;
+  display: block;
+  padding-bottom: 54px;
+}
+
+.form-label{
+
+	color: #182825;
+	font-weight: bold;
+
+}
+
 
 .form-input{
-	border-radius: 15px !important;
+
+	color:  #182825 !important;
+	border:none;
+	border-radius: 0px !important;
+	border-bottom: 2px solid #016FB9;
+}
+.form-input:focus{
+    outline: 0 !important;
+	box-shadow: none;
+}
+.form-icon{
+
+	color:#016FB9;
+	position: absolute;
+	
 }
 .login-image{
-    
+  
+ padding-top: 6rem !important;  
  max-width: 70% !important;
  height: auto !important;
 
 }
 .btn-primary{
 	border-radius: 30px !important;
-	height: 50px !important;
+	line-height: 20px !important;
 	text-align: center;
 	font-size: 20px
 	justify-content:center;
@@ -62,18 +104,10 @@
     background: #2c3e50;
     height: 70vh;
 }
-.form-title{
-  font-size: 30px;
-  color: #182825;
-  line-height: 1.2;
-  text-align: center;
-  
-  width: 100%;
-  display: block;
-  padding-bottom: 54px;
-}
+
 .card{
   background-image: url(assets/images/wave_login_form.png) !important;
   background-repeat: no-repeat !important;
   background-position:center center !important;
 }
+
